--- a/tribute.html
+++ b/tribute.html
@@ -14,7 +14,7 @@
 
     <section class="intro">
         <div class="profilepic">
-            <img src="img/haruki.jpg">
+            <img src="haruki.jpg">
         </div>
         <div class="info">
             <h1>HARUKI MURAKAMI</h1>
@@ -50,15 +50,15 @@
         <h1>Murakami's Must Reads</h1>
         <div class="bookinfo">
             <div class="item">
-                <img src="img/norwegian.jpg">
+                <img src="norwegian.jpg">
                 <h1>Norwegian Wood</h1>
             </div>
             <div class="item">
-                <img src="img/murakami.jpg">
+                <img src="murakami.jpg">
                 <h1>Men Without Women</h1>
             </div>
             <div class="item">
-                <img src="img/kafka.jpg">
+                <img src="kafka.jpg">
                 <h1>Kafka On The Shore</h1>
             </div>
         </div>
